force-app/main/default/objects/TriggerStatus__c/TriggerStatus__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Allows for triggers to be turned on or off</description>
    <label>Trigger Status</label>
</CustomObject>