force-app/main/default/objects/TriggerStatus__c/fields/AccountGenerateCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountGenerateCustomerNumber__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When an Account is updated and does not have a customer number, create a new one based on existing Accounts</description>
    <inlineHelpText>When an Account is updated and does not have a customer number, create a new one based on existing Accounts</inlineHelpText>
    <label>Account: Generate Customer Number</label>
    <type>Checkbox</type>
</CustomField>