force-app/main/default/objects/TriggerStatus__c/fields/AccountSyncToTimberline__c.field-meta.xml
<CustomField>
    <fullName>AccountSyncToTimberline__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Synchronizes account data with Timberline</description>
    <inlineHelpText>Synchronizes account data with Timberline</inlineHelpText>
    <label>Account: Sync to Timberline</label>
    <type>Checkbox</type>
</CustomField>