force-app/main/default/objects/TriggerStatus__c/fields/Forecast_Sync_to_Timberline__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Sync_to_Timberline__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Forecast : Refresh from Timberline</label>
    <type>Checkbox</type>
</CustomField>