force-app/main/default/objects/TriggerStatus__c/fields/InvoiceAutomaticInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAutomaticInvoiceNumber__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Invoice: Automatic Invoice Number</label>
    <type>Checkbox</type>
</CustomField>