force-app/main/default/objects/TriggerStatus__c/fields/InvoiceLineItemAutoCreation__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLineItemAutoCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InvoiceLineItem: AutoCreation</label>
    <type>Checkbox</type>
</CustomField>