force-app/main/default/objects/TriggerStatus__c/fields/InvoiceLineItemAutomaticNaming__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLineItemAutomaticNaming__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InvoiceLineItem: AutomaticNaming</label>
    <type>Checkbox</type>
</CustomField>