force-app/main/default/objects/TriggerStatus__c/fields/InvoiceLineItemAutomaticOrder__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLineItemAutomaticOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Line Item Automatic Order</label>
    <type>Checkbox</type>
</CustomField>