force-app/main/default/objects/TriggerStatus__c/fields/InvoiceSyncToTimberline__c.field-meta.xml
<CustomField>
    <fullName>InvoiceSyncToTimberline__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Invoice: Sync To Timberline</label>
    <type>Checkbox</type>
</CustomField>