force-app/main/default/objects/TriggerStatus__c/fields/InvoiceTaxGroupSetUp__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTaxGroupSetUp__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Invoice Tax Group Set Up</label>
    <type>Checkbox</type>
</CustomField>