force-app/main/default/objects/TriggerStatus__c/fields/Job_Number_Sequence_Group__c.field-meta.xml
<CustomField>
    <fullName>Job_Number_Sequence_Group__c</fullName>
    <label>Job: Job Number Sequence Group</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>