force-app/main/default/objects/TriggerStatus__c/fields/JobCopyPMToOwner__c.field-meta.xml
<CustomField>
    <fullName>JobCopyPMToOwner__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Copes the value in the Project Manager field to the Owner record for Jobs</description>
    <inlineHelpText>Copes the value in the Project Manager field to the Owner record for Jobs</inlineHelpText>
    <label>Job: Copy PM to Owner</label>
    <type>Checkbox</type>
</CustomField>