force-app/main/default/objects/TriggerStatus__c/fields/JobOpportunitySync__c.field-meta.xml
<CustomField>
    <fullName>JobOpportunitySync__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When a Job is updated, synchronizes job data to an associated Opportunity, attempting to create a new one if one does not yet exist.</description>
    <inlineHelpText>When a Job is updated, synchronizes job data to an associated Opportunity, attempting to create a new one if one does not yet exist.</inlineHelpText>
    <label>Job: Opportunity Sync</label>
    <type>Checkbox</type>
</CustomField>