force-app/main/default/objects/TriggerStatus__c/fields/JobSetJobNumber__c.field-meta.xml
<CustomField>
    <fullName>JobSetJobNumber__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sets the Job number for any jobs that do not have it set.</description>
    <inlineHelpText>Sets the Job number for any jobs that do not have it set.</inlineHelpText>
    <label>Job: Set Job Number</label>
    <type>Checkbox</type>
</CustomField>