force-app/main/default/objects/TriggerStatus__c/fields/JobSyncToTimberline__c.field-meta.xml
<CustomField>
    <fullName>JobSyncToTimberline__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Synchronizes Job Data with Timberline</description>
    <inlineHelpText>Synchronizes Job Data with Timberline</inlineHelpText>
    <label>Job: Sync to Timberline</label>
    <type>Checkbox</type>
</CustomField>