force-app/main/default/objects/TriggerStatus__c/fields/LeadPMLeadSync__c.field-meta.xml
<CustomField>
    <fullName>LeadPMLeadSync__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When a Lead is updated, synchronizes Lead data with a PM Lead record, creating a new one if necessary.</description>
    <inlineHelpText>When a Lead is updated, synchronizes Lead data with a PM Lead record, creating a new one if necessary.</inlineHelpText>
    <label>Lead: PM Lead Sync</label>
    <type>Checkbox</type>
</CustomField>