force-app/main/default/objects/TriggerStatus__c/fields/OpportunityJobSync__c.field-meta.xml
<CustomField>
    <fullName>OpportunityJobSync__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When an Opportunity is updated, takes Opportunity data and synchronizes it to a Job record, creating a new one if one does not exist.</description>
    <inlineHelpText>When an Opportunity is updated, takes Opportunity data and synchronizes it to a Job record, creating a new one if one does not exist.</inlineHelpText>
    <label>Opportunity: Job Sync</label>
    <type>Checkbox</type>
</CustomField>