force-app/main/default/objects/TriggerStatus__c/fields/PMLeadCalculateJobNumber__c.field-meta.xml
<CustomField>
    <fullName>PMLeadCalculateJobNumber__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When PM Leads are updated, calculates the job number.</description>
    <inlineHelpText>When PM Leads are updated, calculates the job number.</inlineHelpText>
    <label>PM Lead: Calculate Job Number</label>
    <type>Checkbox</type>
</CustomField>