force-app/main/default/objects/TriggerStatus__c/fields/PMLeadConversion__c.field-meta.xml
<CustomField>
    <fullName>PMLeadConversion__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When the &quot;Is Converted&quot; checkbox is checked, runs the PM Lead through the conversion process.</description>
    <inlineHelpText>When the &quot;Is Converted&quot; checkbox is checked, runs the PM Lead through the conversion process.</inlineHelpText>
    <label>PM Lead: Conversion</label>
    <type>Checkbox</type>
</CustomField>