force-app/main/default/objects/TriggerStatus__c/fields/PMLeadLeadSync__c.field-meta.xml
<CustomField>
    <fullName>PMLeadLeadSync__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When a PM Lead is updated, synchronizes PM Lead data with a Lead record, creating a new one if necessary.</description>
    <inlineHelpText>When a PM Lead is updated, synchronizes PM Lead data with a Lead record, creating a new one if necessary.</inlineHelpText>
    <label>PM Lead: Lead Sync</label>
    <type>Checkbox</type>
</CustomField>