force-app/main/default/objects/TriggerStatus__c/fields/TaskTaskSync__c.field-meta.xml
<CustomField>
    <fullName>TaskTaskSync__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Synchronizes tasks between PM Leads and Leads</description>
    <inlineHelpText>Synchronizes tasks between PM Leads and Leads</inlineHelpText>
    <label>Task: Task Sync</label>
    <type>Checkbox</type>
</CustomField>