force-app/main/default/objects/TriggerStatus__c/fields/TaxGroupRefreshFromTimberline__c.field-meta.xml
<CustomField>
    <fullName>TaxGroupRefreshFromTimberline__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows for the trigger to run which handles</description>
    <label>Tax Group: Refresh From Timberline</label>
    <type>Checkbox</type>
</CustomField>