force-app/main/default/objects/TriggerStatus__c/fields/TaxGroupSetName__c.field-meta.xml
<CustomField>
    <fullName>TaxGroupSetName__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sets the name of the Tax Group to the corresponding Timberline ID</description>
    <inlineHelpText>Sets the name of the Tax Group to the corresponding Timberline ID</inlineHelpText>
    <label>Tax Group: Set Name</label>
    <type>Checkbox</type>
</CustomField>